# frnaf

./: Cargo.toml  README.md  build.rs  icon.rc
src/: assets.rs  counter.rs  main.rs  save.rs  title.rs  warning.rs
src/title/: blipplugin.rs  freddyplugin.rs  mod.rs  staticplugin.rs
