[package]
name = "frnaf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7", feature = ["wayland"] }
rand = "0.8.5"
benimator = "3"
bevy-embasset = "0.5"
paste= "1.0"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"
bevy_tweening = "0.4"

[build_dependencies]
embed-resource = "1.4"

[dependencies.strum]
version = "0.24"
features = ["derive"]

[dependencies.bevy_kira_audio]
version = "0.10.0"
default-features = false
features = [
  "wav",
  "mp3",
]
